--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,43 @@
     <title>Task Manager</title>
   </head>
   <body>
-    <h1>Task Manager</h1>
+    <header>
+      <!-- top navbar  -->
+      <nav class="nav-extended text-shadow light-blue darken-1">
+        <div class="nav-wrapper">
+          <a href="#!" class="brand-logo">Task Manager</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">New Task</a></li>
+            <li><a href="#">Manage Categories</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Register</a></li>
+          </ul>
+        </div>
+      </nav>
+
+    <!-- mobile sidenav  -->
+      <ul class="sidenav" id="mobile-demo">
+        <li><h4 class="center-align light-blue-text text-darken-4">Task Manager</h4></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">New Task</a></li>
+        <li><a href="#">Manage Categories</a></li>
+        <li><a href="#">Log Out</a></li>
+        <li><a href="#">Log In</a></li>
+        <li><a href="#">Register</a></li>
+      </ul>
+              
+    </header>
 
     {% block content %} {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  
+    <script src="static/js/script.js"></script>
     {% block scripts %}
     {% endblock %}
   </body>
