--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,19 @@
               
     </header>
 
+    <section>
+      <!-- flash messages -->
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <div class="row flashes">
+              <h4 class="light-blue lighten-4 center-align">{{message}}</h4>
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </section>
+
     {% block content %} {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
