--- a/templates/base.html
+++ b/templates/base.html
@@ -72,8 +72,9 @@
         {% endif %}
       {% endwith %}
     </section>
-
-    {% block content %} {% endblock %}
+    <main class="container">
+      {% block content %} {% endblock %}
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
